// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`builder > can be created with children and parent rules 1`] = `
{
  "childrenAllowed": {
    "test": true,
  },
  "entities": [
    {
      "attributes": [],
      "defaultValue": [Function],
      "isValueAllowed": false,
      "name": "test",
      "shouldBeProcessed": [Function],
      "validate": [Function],
    },
  ],
  "entitiesExtensions": {},
  "generateEntityId": [Function],
  "parentRequired": [
    "test",
  ],
  "validateEntityId": [Function],
  "validateSchema": [Function],
}
`;

exports[`builder > can be created with entities 1`] = `
{
  "childrenAllowed": {},
  "entities": [
    {
      "attributes": [],
      "defaultValue": [Function],
      "isValueAllowed": false,
      "name": "test",
      "shouldBeProcessed": [Function],
      "validate": [Function],
    },
  ],
  "entitiesExtensions": {},
  "generateEntityId": [Function],
  "parentRequired": [],
  "validateEntityId": [Function],
  "validateSchema": [Function],
}
`;

exports[`builder > can be created with entity ID generator and validator 1`] = `
{
  "childrenAllowed": {},
  "entities": [],
  "entitiesExtensions": {},
  "generateEntityId": [Function],
  "parentRequired": [],
  "validateEntityId": [Function],
  "validateSchema": [Function],
}
`;

exports[`builder > can be created with entity ID generator and validator 2`] = `"1"`;

exports[`builder > can be created with entity ID generator and validator 3`] = `undefined`;

exports[`builder > can be created with entity ID generator and validator 4`] = `"Not equal to 1"`;

exports[`builder > can be created with minimal options 1`] = `
{
  "childrenAllowed": {},
  "entities": [],
  "entitiesExtensions": {},
  "generateEntityId": [MockFunction generateUuid],
  "parentRequired": [],
  "validateEntityId": [MockFunction validateUuid],
  "validateSchema": [Function],
}
`;
